samples/_failures_safe/1761512380_cd19a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf302160.c: In function ‘main’:
./samples/SAFE/__tmp_bf302160.c:154:17: error: expected declaration or statement at end of input
  154 |                 from[strcspn(from, "\n")] = '\0';
      |                 ^~~~
./samples/SAFE/__tmp_bf302160.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf302160.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf302160.c:154:17: error: expected declaration or statement at end of input
